--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0"?>
+
 <package format="2">
-  <name>autotuning</name>
+  <name>autotuner</name>
   <version>0.0.0</version>
   <description>The autotuning package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
+  <maintainer email="shohei.morikawa@nagoya-u.jp">shohei morikawa</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -50,12 +50,13 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>std_msg</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>message_filters</build_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msg</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msg</exec_depend>
-
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>message_filters</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
