--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,11 +62,10 @@ add_service_files(
 )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
+#add_action_files(
 #   FILES
-#   Action1.action
-#   Action2.action
-# )
+#   task.action
+#)
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
